--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
-  - 2.1.0
+  - 2.1.1
 
+gemfile:
+  - gemfiles/mongoid-3.1.gemfile
+  - gemfiles/mongoid-4.0.gemfile
+  - Gemfile
